Fixed some inefficiencies (found by FindBugs) by taking autoboxing into use.
git-svn-id: https://svn.apache.org/repos/asf/incubator/jspwiki/trunk@666835 13f79535-47bb-0310-9956-ffa450edef68